# Todo-Rust

./: .gitignore  Cargo.toml  Dockerfile.auth  Dockerfile.ssl  README.md  build.sh  build_ssl.sh  run.sh  send.sh  todo-server.yml
todo-auth/: Cargo.toml
todo-auth/src/: errors.rs  lib.rs  login.rs  main.rs  spec.rs
todo-client/: Cargo.toml
todo-client/src/: cli.rs  errors.rs  lib.rs  login.rs  main.rs  tui.rs
todo-server/: Cargo.toml
todo-server/src/: lib.rs  main.rs
todo-spec/: Cargo.toml
todo-spec/src/: api.rs  credentials.rs  errors.rs  lib.rs
