[package]
name = "todo-auth"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
log = "0.4.14"
mysql = "22.1.0"
serde_json = "1.0.79"
simplelog = "0.11.2"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.2"

todo-spec = { path = "../todo-spec" }
