[package]
name = "todo-client"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[[bin]]
name = "todoctl"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
crossterm = "0.23.1"
dirs-2 = "3.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tui = "0.17.0"
url = "2.2.2"
