[package]
name = "todo-spec"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.5.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
unicode-segmentation = "1.9.0"
